sjeng/use_undefined_identifier/c3/losers_eval
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/losers_eval/src/leval.c:750:11: error: use of undeclared identifier 'xmmword_41C590'
v163[0] = xmmword_41C590; 
          ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/losers_eval/src/leval.c:751:11: error: use of undeclared identifier 'xmmword_41C5A0'
v160[0] = xmmword_41C5A0; 
          ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/losers_eval/src/leval.c:752:11: error: use of undeclared identifier 'xmmword_41C590'
v163[1] = xmmword_41C590; 
          ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/losers_eval/src/leval.c:753:11: error: use of undeclared identifier 'xmmword_41C5A0'
v160[1] = xmmword_41C5A0; 
          ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/losers_eval/src/leval.c:992:5: error: use of undeclared identifier 'dword_66859C'
+ ( dword_66859C[v14] == 13) 
    ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/losers_eval/src/leval.c:1003:5: error: use of undeclared identifier 'dword_66859C'
+ ( dword_66859C[v14] == 13) 
    ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/losers_eval/src/leval.c:1022:8: error: use of undeclared identifier 'dword_66859C'
v90 = &dword_66859C[v14]; 
       ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/losers_eval/src/leval.c:1065:8: error: use of undeclared identifier 'dword_66859C'
v80 = &dword_66859C[v14]; 
       ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/losers_eval/src/leval.c:1165:9: error: use of undeclared identifier 'dword_66859C'
v120 = &dword_66859C[v14]; 
        ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/losers_eval/src/leval.c:1271:8: error: use of undeclared identifier 'dword_66859C'
v48 = &dword_66859C[v14]; 
       ^
10 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/losers_eval/src/obj/leval.o] Error 1
